# img_env

./: .gitignore  README.md  README_CN.md  create_launch.py  env_test.py
comn_pkg/: package.xml
comn_pkg/include/comn_pkg/: peek_cmd.h
comn_pkg/msg/: Agent.msg  AgentState.msg  Env.msg  EnvInit.msg  EnvsInfo.msg  EpRes.msg  PedInfo.msg
comn_pkg/srv/: EndEp.srv  InitEnv.srv  ResetEnv.srv  StepEnv.srv
docs/paperwriting-record/: draw_trajectory_picture.md
envs/: __init__.py
envs/action/: __init__.py  action.py
envs/cfg/: 10obs_5ped_baseline.yaml  circle.yaml  ped_map.yaml  random.yaml  sensor_map.yaml  test.yaml
envs/cfg/gazebo_cfg/: jackal_clearpath_barndataset.yaml  turtlebot2_barndataset.yaml  turtlebot3_barndataset.yaml
envs/cfg/old_cfg/: all_image.yaml  cross_1_actor.yaml  cross_face.yaml  cross_manyactor.yaml  cross_ob_and_actor.yaml  cross_very_easy.yaml  easy_difficulty_env.yaml  easy_random_actor.yaml  easy_vfh.yaml  empty_circle_6.yaml  empty_easy_muti.yaml  empty_multi.yaml  empty_muti.yaml  empty_muti2.yaml  empty_muti_6.yaml  empty_muti_8.yaml  expert_difficulty_env.yaml  fixed_env.yaml  gong_room_train.yaml  hard_difficulty_env.yaml  image_big.yaml  image_circle.yaml  image_circle_big.yaml  image_circle_fix.yaml  image_circle_fix_8.yaml  image_corridor.yaml  image_corridor2.yaml  image_corridor3.yaml  image_cross.yaml  image_cross_2.yaml  image_diff_robots.yaml  image_diff_robots_random.yaml  image_env.yaml  image_kejia.yaml  image_obstacle.yaml  image_omni.yaml  image_omni_2.yaml  image_pc_test.yaml  image_ped.yaml  image_ped_circle.yaml  (+60 more)
envs/cfg/real_exp/: agilx.yaml  turtlebot_real.yaml  turtlebot_real_dwa.yaml
envs/env/: __init__.py  gazebo_env.py  real_env.py  yaml_env.py
envs/state/: __init__.py  state.py
envs/utils/: __init__.py  lidar_process.py  reset_helper.py  ros_utils.py  sarl_helper.py
envs/utils/bag/: bag.py  readme.md  save_init_pose.py
envs/wrapper/: __init__.py  base.py  filter_states.py  readme.md
envs/wrapper/evaluation_wrapper/: BarnDataSetWrapper.py  PedTrajectoryDatasetWrapper.py  RealTestRecoderWrapper.py  TestEpisodeWrapper.py  readme.md  utils.py
img_env/: package.xml
img_env/launch/: scan_env.launch
img_env/src/: agent.cpp  agent.h  grid_map.cpp  img_env.cpp  img_env.h  img_env_node.cpp
src/: .gitignore  README.md
src/comn_pkg/: CMakeLists.txt  package.xml
src/comn_pkg/action/: PathFollow.action
src/comn_pkg/include/comn_pkg/: drl_console.h
src/comn_pkg/launch/: console_debug.launch
src/comn_pkg/msg/: Agent.msg  AgentState.msg  Env.msg  EnvInit.msg  EnvReset.msg  RobotRes.msg  RobotState.msg  SpeedLimiter.msg
src/comn_pkg/src/: drl_console.cpp
src/comn_pkg/srv/: CheckGoal.srv  EndEp.srv  GetVel.srv  InitEnv.srv  MapValue.srv  PathPlan.srv  ResetEnv.srv  SetPose.srv  StepEnv.srv  VFHPlan.srv
src/img_env/: CMakeLists.txt  package.xml
src/img_env/launch/: cityu.launch  kinect_simple_env.launch  pc_env.launch  scan_env.launch
src/img_env/src/: agent.cpp  agent.h  emptyscene.h  ervoscene.h  grid_map.h  img_env.cpp  img_env.h  img_env_node.cpp  pedscene.h  rvoscene.h  scene.h  scenefactory.h  speed_limit.cpp  speed_limit.h
