<?xml version="1.0"?>
<package format="2">
  <name>img_env</name>
  <version>0.0.0</version>
  <description>The img_env package</description>

  <author email="cgdsss@mail.ustc.edu.cn">Guangda Chen</author>
  <maintainer email="cgdsss@mail.ustc.edu.cn">Guangda Chen</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>comn_pkg</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pedsimros</build_depend>
  <build_depend>ervo_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>comn_pkg</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>pedsimros</build_export_depend>
  <build_export_depend>ervo_ros</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>comn_pkg</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pedsimros</exec_depend>
  <exec_depend>ervo_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
